frontend/test/should_pass/nodeedgebynameuniquemodel.gm
node class N;
edge class E;
index unique;