frontend/test/should_fail/multi_retype_due_to_hom_overshadowed_by_other_hom.gm
node class N;
node class M;

edge class E;
edge class F;
